接口优化